# PR-EXO-Custom-ComfyUI-Nodes-41b89e0f

./: ComfyUI_EXO_Clip_Text_Encode.py  ComfyUI_EXO_DisplayText.py  ComfyUI_EXO_FluxSampler.py  ComfyUI_EXO_FluxSampler_Mini.py  ComfyUI_EXO_ImageRescale.py  ComfyUI_EXO_LatentImageSize.py  ComfyUI_EXO_LatentImageSizeX.py  ComfyUI_EXO_Model_SamplingFlux.py  ComfyUI_EXO_Notes.py  ComfyUI_EXO_NumericValue.py  ComfyUI_EXO_PromptBuilderDeluxe.py  ComfyUI_EXO_SaveText.py  ComfyUI_EXO_TranslateText.py  Latent_Image_Size_config.json  README.md  Save_Text_directory_config.json  Scale_Factor_config.json  __init__.py  exologger.py  functions.py  global_flags.py  language_config.py  prompt_builder_config.json  pyproject.toml
data/Mood/: Mood.json
docs/: ComfyUI EXO - Clip Text Encode.txt  ComfyUI EXO - Display Text.txt  ComfyUI EXO - FluxSampler_Mini.txt  ComfyUI EXO - Latent Image Size.txt  ComfyUI EXO - Notes.txt  ComfyUI EXO - Numeric Value.txt  ComfyUI EXO - Save Text.txt  ComfyUI EXO - exologger.txt  ComfyUI EXO - functions.txt  ComfyUI EXO - language_config.txt  ComfyUI EXO - prompt_builder_config.txt  ComfyUI EXO FluxSampler.txt  ComfyUI EXO Image Rescale.txt  ComfyUI EXO Intro.txt  ComfyUI EXO Latent Image Size X.txt  ComfyUI EXO Notes.txt  ComfyUI EXO Prompt Builder Deluxe.txt  ComfyUI EXO Save_Text_directory_config.txt  ComfyUI EXO Scale_Factor_config.txt  ComfyUI EXO Translate Text.txt  ComfyUI EXO latent_image_size_config.txt
languages/: ar.yaml  bn.yaml  de.yaml  en.yaml  es.yaml  fr.yaml  hi.yaml  ja.yaml  ko.yaml  pa.yaml  pt.yaml  ru.yaml  tr.yaml  vi.yaml  zh.yaml
(+80 files in other folders)
