[project]
name = "exo-custom-comfyui-nodes"
description = "A custom node pack made with efficiency and quality of life features in mind. Most notably is my Prompt Builder Deluxe Node. Unlike any other run-of-the-mill prompt builder or styler node out there. Mine allows you to create and design in a way no other node does."
version = "1.0.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/xfgexo/EXO-Custom-ComfyUI-Nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "EXO-Custom-ComfyUI-Nodes"
Icon = ""
